--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -27,5 +27,9 @@
         android:id="@+id/searchFragment2"
         android:name="com.example.foodplanner.view.fragment.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <argument
+            android:name="request"
+            app:argType="string" />
+    </fragment>
 </navigation>
