--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -21,7 +21,11 @@
         android:id="@+id/searchHomeFragment2"
         android:name="com.example.foodplanner.view.fragment.SearchHomeFragment"
         android:label="fragment_search_home"
-        tools:layout="@layout/fragment_search_home" />
+        tools:layout="@layout/fragment_search_home" >
+        <action
+            android:id="@+id/action_searchHomeFragment2_to_searchFragment2"
+            app:destination="@id/searchFragment2" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment2"
         android:name="com.example.foodplanner.view.fragment.SearchFragment"
