--- a/app/src/main/res/layout/fav_layout.xml
+++ b/app/src/main/res/layout/fav_layout.xml
@@ -2,25 +2,21 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
+    android:layout_width="350dp"
     app:cardCornerRadius="50dp"
     android:layout_margin="20dp"
     android:backgroundTint="@color/darkBlue"
     android:layout_height="200dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:id="@+id/constLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:layout_width="200dp"
-            android:layout_height="120dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:cardCornerRadius="50dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="200dp"
+            app:cardCornerRadius="50dp">
 
             <ImageView
                 android:id="@+id/favThum"
@@ -37,19 +33,28 @@
         </androidx.cardview.widget.CardView>
 
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/favName"
-        android:layout_width="176dp"
-        android:layout_height="77dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="130dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="25dp" />
+
+    <Button
+        android:id="@+id/removeFromFav"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/blue"
+        android:text="Remove"
+        app:cornerRadius="50dp" />
 
 
 </androidx.cardview.widget.CardView>
