--- a/app/src/main/res/layout/cat_layout.xml
+++ b/app/src/main/res/layout/cat_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     app:cardCornerRadius="50dp"
+    android:layout_margin="20dp"
     android:layout_marginLeft="20dp"
     android:backgroundTint="@color/darkBlue"
     android:layout_height="250dp">
